# bpmdj

./: .gitignore  AUTHORS  BpmDjLogo.xcf  ChangeLog  GNUmakefile  GNUmakefile.in  INSTALL  README  README.TXT  TODO  about.h  about.moc.cpp  about.ui  aboutbox.cpp  aboutbox.h  accessors.h  active-objects.h  albumbox.ui  albumitem.cpp  albumitem.h  allocator.h  alsamixerguis  analcommandwizard.ui  analyzer-impl.cpp  analyzer-impl.h  analyzer-progress-qt.cpp  analyzer-progress-qt.h  analyzer-runner.cpp  analyzer-runner.h  analyzer-worker.ao  analyzer-worker.cpp  analyzer-worker.h  analyzer.cpp  analyzer.h  analyzers-manager.cpp  analyzers-manager.h  analyzers-progress.logic.cpp  analyzers-progress.logic.h  analyzers-progress.ui  ao-grammar.h  (+681 more)
Active/: active-objects.h  ao-grammar.h  ao-lexer.h  ao-lexer.l  ao-pool.h  ao-scheduler.h  ao-syntax.cpp  ao-syntax.h  ao-syntax.y  ao-tracker.h  cmpxchg.h  defines  demo1.h  lock.h  makefile
Data/: array-creator.cpp  array-creator.h  array-iterator.h  array-meta.h  array-storage.h  array-test.cpp  array.h  compiling.txt  coordinates.h  data-io.cpp  data-io.h  data-lexer.cpp  data-lexer.l  data-syntax.cpp  data-syntax.h  data-syntax.y  data-visitor.cpp  data-visitor.h  data.h  defines  defines.linux.qt4  do-lexer.l  do-printer.cpp  do-syntax.cpp  do-syntax.y  expr-test.cpp  expr.h  makefile  null.cpp  null.h  numbers.h  om-data.h  reference-count.h  set.cpp  set.h  string.cpp  string.h  symbol.cpp  symbol.h  template-instances.cpp  (+6 more)
SignalProcessing/: defines  depend  makefile  normalize.cpp  normalize.h
artefacts/: bpm-life.ui  kbpm-life.cpp
debian/: README.debian  changelog  control  copyright  dirs  files  manpage.1.ex  rules  substvars
sequences/: 44to34.map  44to34Accented.map  44to34double.map  Empty.map  Fill-1B-01-Silence.map  Fill-1M-01-Sliced.map  Fill-1M-02-Sliced.map  Fill-1M-03-RepeatUp.map  Fill-1M-04-Repeat.map  Fill-1M-05-CdBreak.map  Fill-1M-06-Delayed.map  Fill-2B-01-Repeat.map  Fill-2M-01-BeforeEnd.map  Fill-2M-02-RepeatUp.map  Fill-2M-03-Sliced.map  Fill-2M-04-SlicedUp.map  Fill-2M-05-EmptyBDFix.map  Fill-4M-01-Delayed.map  Loop-1B-01.map  Loop-1M-01.map  Loop-4M-01.map  Melodic-1M-01.map  Melodic-1M-02.map  Roll-4M-01-DownUp.map  Roll-4M-02-Up.map  Roll-4M-03-Up.map  Roll-4M-04-Faster.map  Rythm-1M-06-Reverse.map  Rythm-2M-05-Reverse.map  Rythm-4M-01-AddedBD.map  Rythm-4M-02-BDRemoval.map  Rythm-4M-03-BDRemoval.map  Rythm-4M-04-BDRemoval.map  Rythm-4M-06-StretchFill.map  Rythm-4M-07-Reverse.map  Start-1M-01-Sliced.map  Start-1M-02-Sliced.map  Start-1M-03-VolUp.map  Start-1M-04-VolUp.map  Start-4M-05.map  (+5 more)
slackware/: create_slack_tgz.sh  install  slack-desc
